2007-10-02  Stephen Deasey  <sdeasey@users.sf.net>

	* include/ns.h:
	* nsd/connio.c:
	* nsd/queue.c:
	* nsd/return.c: Make sure we can tell the difference between an
	unspecified content-length and an explicit zero length body, such as a
	header flush. Shuffle the code around to try and make the relationship
	between length, streaming, chunking, keep-alive etc. clearer.

	* nsd/conn.c:
	* nsd/tclresp.c: Re-add the -binary switch to ns_headers. Binary
	streaming now possible.

	* tests/tclresp.test: Updates for mime-type/charset issues.
	* tests/tclconnio.test: Add tests for 'ns_conn chanel'.

	* doc/src/mann/ns_write.man: Explain the -binary switch.

	* doc/src/man3/Ns_Sls.man:
	* doc/src/mann/ns_accesslog.man:
	* doc/src/mann/ns_atsignal.man:
	* doc/src/mann/ns_cache.man:
	* doc/src/mann/ns_cookie.man:
	* doc/src/mann/ns_ictl.man:
	* doc/src/mann/ns_limits.man:
	* doc/src/mann/ns_log.man:
	* doc/src/mann/ns_memoize.man:
	* doc/src/mann/ns_register_adp.man:
	* doc/src/mann/ns_return.man:
	* doc/src/mann/ns_returnerror.man: Update to new tclllib-1.10
	syntax. Unfortunately, new tcllib complains voluminously about the old
	syntax, and old tcllib dies on the new. We love the bleeding edge...

2007-09-29  Zoran Vasiljevic <vasiljevic@users.sf.net>

	* nsd/tclresp.c: [ns_headers] last optional length argument
	now allows for "-1" in which case it removes optional
	Content-Length from output headers, thus allowing us to send
	binary streams of initially unknown size.

	* nsthread/time.c: Ns_GetTime now relies on Tcl_GetTime to
	be platform-independent. Also, untabified and formatted.

	* nsproxy/nsproxylib.c: send/receive timers now operate on
	absolute instead of relative time quantums.

2007-09-25  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/tcljob.c: Make sure -jobid parameters ignored if empty
	string is given. also add error message to the log for detached
	and failed jobs                

2007-09-20  Stephen Deasey  <sdeasey@users.sf.net>
